--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
   <body>
     <!-- image, name with short intro -->
     <img
-      src="./assets/Profile Picture.png"
+      src="Profile Picture.png"
       alt="his image"
       height="200"
       width="200"
@@ -78,3 +78,4 @@
     </ol>
   </body>
 </html>
+
